--- a/src/app/pages/setprofile/setprofile.page.html
+++ b/src/app/pages/setprofile/setprofile.page.html
@@ -7,11 +7,11 @@
   </ion-toolbar>
 </ion-header>
 
-
+<ion-content>
   <app-setprofile-c> 
 
   </app-setprofile-c>
-
+</ion-content>
 
 <!-- <ion-content>
     <ion-card>
