--- a/src/app/pages/workout-scheduling/schedule/schedule.component.html
+++ b/src/app/pages/workout-scheduling/schedule/schedule.component.html
@@ -1,11 +1,13 @@
-<ion-card>
+<search [data]="schedules"></search>
+
+<ion-card *ngFor="let schedule of schedules">
   <ion-item-sliding>
     <ion-item>
       <ion-icon name="receipt-outline"></ion-icon>
       <ion-text>
         {{schedule.name}}
       </ion-text>
-      <ion-button slot="end" (click)="viewSchedule()">view</ion-button>
+      <ion-button slot="end" (click)="viewSchedule(schedule)">view</ion-button>
     </ion-item>
 
     <ion-item-options side="start">
@@ -14,7 +16,11 @@
 
     <ion-item-options side="end">
       <ion-item-option>Favorite</ion-item-option>
-      <ion-item-option color="danger" (click)="removeSchedule()">Delete</ion-item-option>
+      <ion-item-option color="danger" (click)="removeSchedule(schedule)">Delete</ion-item-option>
     </ion-item-options>
   </ion-item-sliding>
 </ion-card>
+
+<div *ngIf="schedules.length <= 0">
+  <ion-text>You have 0 {{categoryName}} schedules</ion-text>
+</div>
