--- a/src/app/pages/workout-scheduling/popout-schedule/popout-schedule.component.html
+++ b/src/app/pages/workout-scheduling/popout-schedule/popout-schedule.component.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content [fullscreen]="true">
   <ion-card>
     <ion-card-header>
       <ion-card-title>Workout schedule</ion-card-title>
@@ -7,7 +7,8 @@
       <ion-icon name="barbell-outline"></ion-icon><ion-text class="schedule-value">{{schedule.name}}</ion-text><br>
       <ion-icon name="calendar-outline"></ion-icon><ion-text class="schedule-value">{{schedule.date}}</ion-text><br>
       <ion-icon name="time-outline"></ion-icon><ion-text class="schedule-value">{{schedule.time}}</ion-text><br>
-      <ion-icon name="location-outline"></ion-icon><ion-text class="schedule-value">{{schedule.location}}</ion-text><br><br>
+      <ion-icon name="location-outline"></ion-icon><ion-text class="schedule-value">{{schedule.location}}</ion-text><br>
+      <ion-icon name="timer-outline"></ion-icon><ion-text class="schedule-value">{{schedule.duration}} minutes</ion-text><br><br>
     </ion-card-content>
     <ion-button expand="full" (click)="closePopup()">Close</ion-button>
   </ion-card>
