--- a/src/app/pages/workout-scheduling/workout-scheduling.page.scss
+++ b/src/app/pages/workout-scheduling/workout-scheduling.page.scss
@@ -14,3 +14,11 @@
 ion-segment {
   border-radius: 0px;
 }
+
+ion-content {
+  --background: url('/assets/Asset 2.png') no-repeat center/cover fixed; // #1D3557;
+}
+
+ion-item, ion-toolbar {
+  --background: transparent;
+}
