--- a/src/app/pages/workout-scheduling/popout-schedule/popout-schedule.component.html
+++ b/src/app/pages/workout-scheduling/popout-schedule/popout-schedule.component.html
@@ -1,4 +1,4 @@
-<ion-content [fullscreen]="true">
+<ion-content>
   <ion-card>
     <ion-card-header>
       <ion-card-title>Workout schedule</ion-card-title>
