--- a/src/app/pages/workout-scheduling/schedule/schedule.component.scss
+++ b/src/app/pages/workout-scheduling/schedule/schedule.component.scss
@@ -8,8 +8,8 @@ ion-item{
     --background: #457B9D;
 }
 
-ion-card {
-    opacity: 0.8;
+ion-card, ion-item {
+    opacity: 0.9;
 }
 
 ion-button {
