back button added, comments removed

--- a/src/app/pages/groups/groups.page.html
+++ b/src/app/pages/groups/groups.page.html
@@ -1,17 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-item>
-      <ion-icon name="arrow-back-outline" routerLink="/home/dashboard"></ion-icon>
-      <ion-title>Groups</ion-title>
+    <ion-item lines="none">
       <ion-icon name="add-sharp" routerLink="/setprofile" slot="end">
         <ion-label>add</ion-label>
       </ion-icon>
-
-      <!-- <ion-button class="button"expand="block" routerLink="/setprofile"><ion-icon name="create-outline" slot="start"></ion-icon> -->
-      
-        <!-- <ion-item class="editProfile-button" slot="end">
-        <ion-title class="header">Edit</ion-title> -->
-      <!-- </ion-item> -->
       <backbutton></backbutton>
       <ion-title>groups</ion-title>
     </ion-item>
@@ -49,6 +41,5 @@
 
     </ion-card-content>
   </ion-card>
-<ion-content [fullscreen]="true">
 </ion-content>
   
