--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -45,7 +45,7 @@
     
   <ion-row>
     <ion-col size="6" routerLink="/friends">
-      <ion-title class="title" style=" margin-left: 40px">{{friends$}}<br>Friends</ion-title>
+      <ion-title class="title" style=" margin-left: 40px">{{friendsSize}}<br>Friends</ion-title>
     </ion-col>
     <ion-col size="6" (click)="Groups()" >
       <ion-title class="title" >{{groups$}}<br>Groups</ion-title>
@@ -57,9 +57,6 @@
 
   <div class="flex-center"> 
     <ion-card class="card">
-      <ion-card-content>
-        <ion-button class="button" expand="block" (click)="Leaderboard()"><ion-icon name="bar-chart-outline" slot="start"></ion-icon>&nbsp;LeaderBoard &nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
-      </ion-card-content>
       <ion-card-content>
         <ion-button class="button" expand="block" routerLink="/fitnessgoals"><ion-icon name="american-football-outline" slot = "start"></ion-icon>Goals<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
       </ion-card-content>
