--- a/src/app/pages/setprofile/setprofile.page.html
+++ b/src/app/pages/setprofile/setprofile.page.html
@@ -7,10 +7,8 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <app-setprofile-c> 
-
-  </app-setprofile-c>
+<ion-content [fullscreen]="true">
+  <app-setprofile-c></app-setprofile-c>
 </ion-content>
 
 <!-- <ion-content>
@@ -32,7 +30,7 @@
       <ion-card>
         <ion-button fill = "clear" (click)="toggleEditMode()">
           Edit
-        </ion-button> --> -->
+        </ion-button> --> 
         
         <!-- <ion-button slot="end" fill="clear" (click)="">Edit</ion-button> -->
       <!-- <ion-item> -->
@@ -84,4 +82,3 @@
   </ion-card> -->
 
 <!-- </ion-content> -->
-<app-setprofile-c></app-setprofile-c>
