--- a/src/app/pages/otheruser/schedules/schedules.component.html
+++ b/src/app/pages/otheruser/schedules/schedules.component.html
@@ -19,6 +19,13 @@
             </ion-text>
             <ion-button slot="end" (click)="viewSchedule(schedule)">view</ion-button>
           </ion-item>
+          <ion-card-content  *ngIf="isSlideShow">
+            <ion-icon name="barbell-outline"></ion-icon><ion-text class="schedule-value">{{schedule.name}}</ion-text><br>
+            <ion-icon name="calendar-outline"></ion-icon><ion-text class="schedule-value">{{schedule.date}}</ion-text><br>
+            <ion-icon name="time-outline"></ion-icon><ion-text class="schedule-value">{{schedule.time}}</ion-text><br>
+            <ion-icon name="location-outline"></ion-icon><ion-text class="schedule-value">{{schedule.location}}</ion-text><br>
+            <ion-icon name="timer-outline"></ion-icon><ion-text class="schedule-value">{{schedule.duration}} minutes</ion-text><br><br>
+        </ion-card-content>
         </ion-card>
       </div>
     </div>
