--- a/src/app/pages/workout-scheduling/workout-scheduling.page.html
+++ b/src/app/pages/workout-scheduling/workout-scheduling.page.html
@@ -3,10 +3,6 @@
     <ion-item lines="none">
       <backbutton></backbutton>
       <ion-title>Schedules</ion-title>
-      <ion-item lines="none"slot="end"  class="add-schedule-button" (click)="addSchedule()">
-        <ion-icon name="add-outline"></ion-icon>
-        <ion-icon name="receipt-outline"></ion-icon>
-      </ion-item>
     </ion-item>
   </ion-toolbar>
 </ion-header>
@@ -38,4 +34,10 @@
   [categoryName]="'uncompleted'"  
   [schedules] = "uncompletedSchedules"
   ></workout-schedule>
+
+  <ion-fab slot="fixed" vertical="bottom" horizontal="center">
+    <ion-fab-button (click)="addSchedule()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
