--- a/src/app/pages/workout-scheduling/schedule/schedule.component.html
+++ b/src/app/pages/workout-scheduling/schedule/schedule.component.html
@@ -1,25 +1,8 @@
 <search [data]="schedules"></search>
 
-<ion-card *ngFor="let schedule of schedules" class="schedules">
-  <ion-item-sliding>
-    <ion-item>
-      <ion-icon name="receipt-outline"></ion-icon>
-      <ion-text>
-        {{schedule.name}}
-      </ion-text>
-      <ion-button slot="end" (click)="viewSchedule(schedule)">view</ion-button>
-    </ion-item>
-
-    <ion-item-options side="start">
-      <ion-item-option color="success">Edit</ion-item-option>
-    </ion-item-options>
-
-    <ion-item-options side="end">
-      <ion-item-option>Favorite</ion-item-option>
-      <ion-item-option color="danger" (click)="removeSchedule(schedule)">Delete</ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
-</ion-card>
+<div *ngFor="let schedule of schedules" class="schedules">
+  <schedule-content [schedule]="schedule"></schedule-content>
+</div>
 
 <div [hidden]="schedules.length > 0">
   <ion-card>
