--- a/src/app/pages/workout-scheduling/workout-scheduling.page.scss
+++ b/src/app/pages/workout-scheduling/workout-scheduling.page.scss
@@ -24,10 +24,11 @@ ion-item, ion-toolbar {
 }
 
 ion-fab-button  {
-  --background: #A8DADC;
+  --background: #457B9D;
   --background-hover: #9ce0be;
   --background-activated: #88f4be;
   --background-focused: #88f4be;
   --color: white;
   --ripple-color: deeppink;
+  opacity: 0.9;
 }
