schedule component modified

--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.html
@@ -5,7 +5,8 @@
           <ion-text>
             {{schedule.name}}
           </ion-text>
-          <ion-button slot="end" (click)="viewSchedule()">view</ion-button>
+          <ion-button slot="end" (click)="viewSchedule()" *ngIf="!isSlideShow">view</ion-button>
+          <ion-button slot="end" (click)="viewSchedule()" *ngIf="isSlideShow">close</ion-button>
         </ion-item>
     
         <ion-item-options side="start">
