--- a/src/app/pages/friends/friend/friend.component.scss
+++ b/src/app/pages/friends/friend/friend.component.scss
@@ -12,4 +12,9 @@
 ion-item{
     --highlight-height: 0;
     --inner-border-width: 0;
+    --background: #457B9D;
+}
+
+ion-card, ion-item {
+    opacity: 0.9;
 }
