--- a/src/app/pages/friends/friends.page.html
+++ b/src/app/pages/friends/friends.page.html
@@ -11,20 +11,8 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="search">
-    <ion-searchbar placeholder="find a friend"
-      [(ngModel)] = "searchTerms.searchQuery"
-      (ionInput) = onSearchInput($event)
-    ></ion-searchbar>
-    <div id="search-suggestions">
-      <ion-list *ngIf="searchTerms.showSuggestions">
-        <ion-item *ngFor="let suggestion of searchTerms.filteredSuggestions" (click)="find(suggestion.name!)">
-          {{ suggestion.name }}
-        </ion-item>
-      </ion-list>
-    </div>
-  </div>
+<ion-content [fullscreen]="true">
+  <search [data]="friends"></search>
   <user-friend *ngFor ="let friend of friends" 
     [friend] = "friend"
   >
