user search modified

--- a/src/app/pages/friends/friends.page.scss
+++ b/src/app/pages/friends/friends.page.scss
@@ -9,3 +9,11 @@ ion-item{
     --highlight-height: 0;
     --inner-border-width: 0;
 }
+
+ion-content {
+    --background: url('/assets/Asset 2.png') no-repeat center/cover fixed; // #1D3557;
+}
+
+ion-item, ion-toolbar {
+--background: rgba($color: white, $alpha: 0.1);
+}
