--- a/src/app/pages/search/search.page.scss
+++ b/src/app/pages/search/search.page.scss
@@ -9,3 +9,7 @@
 ion-segment {
   border-radius: 0px;
 }
+
+ion-content {
+  --background: url('/assets/Asset 2.png') no-repeat center/cover fixed; // #1D3557;
+}
