--- a/src/app/pages/search/usersearch/usersearch.component.html
+++ b/src/app/pages/search/usersearch/usersearch.component.html
@@ -9,19 +9,21 @@
   </ion-searchbar>
   
   <div class="search-suggestions" *ngIf="searchTerms.showSuggestions">
-    <ion-list >
-      <ion-item lines="none" 
-        *ngFor="let suggestion of searchTerms.filteredSuggestions" 
-        (click)="find(suggestion)">
-        <ion-avatar>
-          <ion-img src ="{{suggestion.profileURL}}"></ion-img>
-        </ion-avatar>
-        {{ suggestion.displayName }}
-      </ion-item>
-      <ion-item lines="none" *ngIf="searchTerms.filteredSuggestions!.length==0">
-        <ion-text>user not found</ion-text>
-      </ion-item>
-    </ion-list>
+    <ion-card id="search-suggestions">
+      <ion-list >
+        <ion-item lines="none" 
+          *ngFor="let suggestion of searchTerms.filteredSuggestions" 
+          (click)="find(suggestion)">
+          <ion-avatar>
+            <ion-img src ="{{suggestion.profileURL}}"></ion-img>
+          </ion-avatar>
+          {{ suggestion.displayName }}
+        </ion-item>
+        <ion-item lines="none" *ngIf="showNoResults && this.searchTerms.filteredSuggestions!.length==0">
+          <ion-text>user not found</ion-text>
+        </ion-item>
+      </ion-list>
+    </ion-card>
   </div>
 </div>
 
