--- a/src/app/pages/otheruser/friends/friends.component.html
+++ b/src/app/pages/otheruser/friends/friends.component.html
@@ -1,5 +1,5 @@
 <ng-container>
-  <ion-header>
+  <ion-header [translucent]="true">
     <ion-toolbar>
       <ion-item>
         <backbutton></backbutton>
@@ -8,7 +8,7 @@
     </ion-toolbar>
   </ion-header>
   
-  <ion-content>
+  <ion-content [fullscreen]="true">
     <div class = "outer-container">
       <div class="body-content">
         <ion-card *ngFor = "let friend of friends">
@@ -17,10 +17,11 @@
               <img src = "{{friend.profileURL}}" alt="image here" />
             </ion-avatar>
             <ion-text>{{friend.name}}</ion-text>
-            <ion-icon name="chevron-forward-outline" slot = "end" (click)="viewOtherUser(friend)"></ion-icon>
+            <ion-icon name="chevron-forward-outline" slot = "end"  *ngIf="!isCurrentUser(friend)" (click)="viewOtherUser(friend)"></ion-icon>
+            <ion-text slot="end" *ngIf="isCurrentUser(friend)">you</ion-text>
           </ion-item>
         </ion-card>
       </div>
     </div>
-  </ion-content>
+  </ion-content>                
 </ng-container>
