--- a/src/app/pages/otheruser/friends/friends.component.scss
+++ b/src/app/pages/otheruser/friends/friends.component.scss
@@ -1,8 +1,17 @@
 ion-item{
     --highlight-height: 0;
     --inner-border-width: 0;
+    --background: #457B9D;
+}
+
+ion-card, ion-item {
+    opacity: 0.9;
 }
 
 ion-avatar {
     margin: 10px;
+}
+
+ion-content {
+    --background: url('/assets/Asset 2.png') no-repeat center/cover fixed; // #1D3557;
 }
