--- a/src/app/pages/otheruser/schedules/schedules.component.html
+++ b/src/app/pages/otheruser/schedules/schedules.component.html
@@ -1,5 +1,5 @@
 <ng-container>
-  <ion-header>
+  <ion-header [translucent]="true">
     <ion-toolbar>
       <ion-item>
         <backbutton></backbutton>
@@ -8,7 +8,7 @@
     </ion-toolbar>
   </ion-header>
   
-  <ion-content>
+  <ion-content [fullscreen]="true">
     <div class = "outer-container">
       <div class="body-content">
         <ion-card *ngFor = "let schedule of schedules">
