Set Goals update backend

--- a/src/app/pages/fitnessgoals/fitnessgoals.page.html
+++ b/src/app/pages/fitnessgoals/fitnessgoals.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-item>
-      <ion-icon name="arrow-back-outline" routerLink="/userprofile"></ion-icon>
+        <backbutton></backbutton>
       <ion-title>Goals</ion-title>
 
     </ion-item>
