--- a/src/app/pages/setprofile/setprofile.page.html
+++ b/src/app/pages/setprofile/setprofile.page.html
@@ -32,7 +32,7 @@
       <ion-card>
         <ion-button fill = "clear" (click)="toggleEditMode()">
           Edit
-        </ion-button> --> -->
+        </ion-button> -->
         
         <!-- <ion-button slot="end" fill="clear" (click)="">Edit</ion-button> -->
       <!-- <ion-item> -->
@@ -84,4 +84,4 @@
   </ion-card> -->
 
 <!-- </ion-content> -->
-<app-setprofile-c></app-setprofile-c>
+
