Added navigation to workout tracking from schedules

--- a/src/app/pages/workout-scheduling/schedule/schedule.component.html
+++ b/src/app/pages/workout-scheduling/schedule/schedule.component.html
@@ -8,6 +8,7 @@
         {{schedule.name}}
       </ion-text>
       <ion-button slot="end" (click)="viewSchedule(schedule)">view</ion-button>
+      <ion-button slot="end" (click)="addWorkout(schedule)">Add Workout</ion-button>
     </ion-item>
 
     <ion-item-options side="start">
