--- a/src/app/pages/otheruserbadges/other-user-badges.page.html
+++ b/src/app/pages/otheruserbadges/other-user-badges.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-item style="display: flex; align-items: center;">
     <ion-icon name="arrow-back-outline" routerLink="/userprofile" style="font-size: 2rem;"></ion-icon>
-    <ion-title style="margin-left: 1rem;">Badges</ion-title>
+    <ion-title style="margin: 0 auto;">J Badges</ion-title>
   </ion-item>
 </ion-header>
 
