fixes, now connected with backend

--- a/src/app/pages/otheruserbadges/other-user-badges.page.html
+++ b/src/app/pages/otheruserbadges/other-user-badges.page.html
@@ -2,6 +2,7 @@
   <ion-item style="display: flex; align-items: center;">
     <ion-icon name="arrow-back-outline" routerLink="/userprofile" style="font-size: 2rem;"></ion-icon>
     <ion-title style="margin: 0 auto;">J Badges</ion-title>
+    <!-- <ion-title style="margin: 0 auto;">{{user!.name}}'s' Badges</ion-title> -->
   </ion-item>
 </ion-header>
 
