--- a/src/app/pages/splash/splash.page.html
+++ b/src/app/pages/splash/splash.page.html
@@ -2,7 +2,7 @@
   <ion-card class="full-screen-card">
    <div class="inner-wrapper">
     <div class="logo-container">
-      <img class="logo-img" ngSrc="assets/sweatsessionlogotransparent1.png" alt="logo" height="586" width="638">
+      <img class="logo-img" src="assets/sweatsessionlogotransparent1.png" alt="logo">
     </div>
     <ion-card-header>
       <ion-card-title>About</ion-card-title>
