Set Goals and retrieving goals working properly

--- a/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
+++ b/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
@@ -104,11 +104,11 @@
                         </ion-item>
                         <ion-item>
                             <ion-label position="stacked">Start</ion-label>
-                            <ion-input type="date" formControlName="startDate"></ion-input>
+                            <ion-input type="date" formControlName="start"></ion-input>
                         </ion-item>
                         <ion-item>
                             <ion-label position="stacked">End</ion-label>
-                            <ion-input type="date" formControlName="endDate"></ion-input>
+                            <ion-input type="date" formControlName="end"></ion-input>
                         </ion-item>
 
 
