authguards + badges added to otheruser page

--- a/src/app/pages/otheruser/otheruser.page.html
+++ b/src/app/pages/otheruser/otheruser.page.html
@@ -54,5 +54,20 @@
     <ion-button slot="end" (click)="viewFriends()">view</ion-button>
   </ion-item>
  </ion-card>
+ <ion-card>
+  <ion-item>
+    <ion-icon name="medal"></ion-icon>
+    <!-- {{friends!.length}}  -->
+    <ion-card-header>Badges</ion-card-header>
+    <ion-button slot="end" (click)="viewOtherUserBadges()">view</ion-button>
+  </ion-item>
+ </ion-card>
+ <!-- <ion-card>
+  <ion-item>
+    <ion-icon name="people-outline"></ion-icon>
+    <ion-card-header>{{friends!.length}} Points</ion-card-header>
+    <ion-button slot="end" (click)="viewFriends()">view</ion-button>
+  </ion-item>
+ </ion-card> -->
 
 </ion-content>
