added points to otheruser

--- a/src/app/pages/otheruser/otheruser.page.html
+++ b/src/app/pages/otheruser/otheruser.page.html
@@ -62,6 +62,14 @@
     <ion-button slot="end" (click)="viewOtherUserBadges()">view</ion-button>
   </ion-item>
  </ion-card>
+ <ion-card>
+  <ion-item>
+    <ion-icon name="star-outline"></ion-icon>
+    <!-- {{}} Points  -->
+    <ion-card-header>Points</ion-card-header>
+    <!-- <ion-button slot="end" (click)="viewOtherUserBadges()">view</ion-button> -->
+  </ion-item>
+ </ion-card>
  <!-- <ion-card>
   <ion-item>
     <ion-icon name="people-outline"></ion-icon>
