--- a/src/app/pages/badges/badges.page.html
+++ b/src/app/pages/badges/badges.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-item style="display: flex; align-items: center;">
-    <ion-icon name="arrow-back-outline" routerLink="/userprofile" style="font-size: 2rem;"></ion-icon>
+    <backbutton></backbutton>
     <ion-title style="margin: 0 auto;">Badges</ion-title>
   </ion-item>
 </ion-header>
