--- a/src/app/pages/otheruser/otheruser.page.html
+++ b/src/app/pages/otheruser/otheruser.page.html
@@ -66,7 +66,7 @@
   <ion-item>
     <ion-icon name="star-outline"></ion-icon>
     <!-- {{}} Points  -->
-    <ion-card-header>Points</ion-card-header>
+    <ion-card-header *ngIf="points$ | async as points">{{points.userPoints}} Points</ion-card-header>
     <!-- <ion-button slot="end" (click)="viewOtherUserBadges()">view</ion-button> -->
   </ion-item>
  </ion-card>
