--- a/src/app/pages/userprofile/userprofile.page.html
+++ b/src/app/pages/userprofile/userprofile.page.html
@@ -76,10 +76,10 @@
         <ion-button class="button"expand="block" (click)="Schedule()"><ion-icon name="clipboard-outline" slot="start"></ion-icon>&nbsp;Schedule&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
       </ion-card-content>
       <ion-card-content>
-        <ion-button class="button"expand="block" routerLink="/home/badges"><ion-icon name="medal" slot="start"></ion-icon>&nbsp;Badges&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
+        <ion-button class="button"expand="block" routerLink="/badges"><ion-icon name="medal" slot="start"></ion-icon>&nbsp;Badges&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
       </ion-card-content>
       <ion-card-content>
-        <ion-button class="button"expand="block" routerLink="/home/points"><ion-icon name="star-outline" slot="start"></ion-icon>&nbsp;Points&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
+        <ion-button class="button"expand="block" routerLink="/points"><ion-icon name="star-outline" slot="start"></ion-icon>&nbsp;Points&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
       </ion-card-content>
       <ion-card-content>
         <ion-button class="button"expand="block" routerLink="/setprofile"><ion-icon name="create-outline" slot="start"></ion-icon>&nbsp;Edit&nbsp;<ion-icon name="chevron-forward-outline" slot="end"></ion-icon></ion-button>
